--- a/src/index.css
+++ b/src/index.css
@@ -47,6 +47,9 @@
 @import url(./blocks/popup/__input-error/_type/popup__input-error_type_active.css);
 @import url(./blocks/popup/__submit/_type/popup__submit_type_inactive.css);
 @import url(./blocks/popup/__field/popup__field.css);
+@import url(./blocks/popup/__image/popup__image.css);
+@import url(./blocks/popup/__text/popup__text.css);
+
 
 
 @import url(./blocks/viewer/__container/viewer__container.css);
