--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,7 @@
 @import url(./blocks/background/background.css);
 @import url(./blocks/header/header.css);
 @import url(./blocks/header/__logo/header__logo.css);
+@import url(./blocks/header/__container/header__container.css);
 
 @import url(./blocks/profile/profile.css);
 @import url(./blocks/profile/__avatar/profile__avatar.css);
@@ -62,6 +63,8 @@
 @import url(./blocks/auth/__submit/auth__submit.css);
 @import url(./blocks/auth/__text/auth__text.css);
 @import url(./blocks/auth/__link/auth__link.css);
+@import url(./blocks/auth/__link/_type/auth__link_type_exit.css);
+@import url(./blocks/auth/__link/_type/auth__link_type_user-data.css);
 
 
 
